[package]
name = "dcap_quote"
version = "0.1.0"
authors = ["Zheng, Qi <huaiqing.zq@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_types   = { rev = "v1.1.3",git = "https://github.com/apache/teaclave-sgx-sdk.git" }
libc = "0.2"
webpki = "0.21"
base64 = "0.9.2"
curv = { git = "https://github.com/sgx-test/curv-sgx", version = "0.7", branch = "0.7.0-sgx-struct", features = ["num-bigint"] }
rustls      = { version = "0.19", features = ["dangerous_configuration"] }
pem = "0.8"
httparse = "*"
webpki-roots = "0.21"
#reqwest = "0.11.5"
#p256 = { tag = "p256/v0.5.2", git = "https://github.com/RustCrypto/elliptic-curves" } #, features = ["ecdsa"]
chrono  = "*"
yasna   = { git = "https://github.com/sgx-test/yasna.rs", features = ["bit-vec", "num-bigint", "chrono"] }
bit-vec = "*"
rand_core = { version = "0.5.1", features = ["getrandom"] }
num-bigint = "0.4.2"
ring = "0.16.20"
[lib]
crate-type = ["cdylib", "rlib"]
